OmniDB/OmniDB_app/static/OmniDB_app/scss/omnidb.scss
/* ... */
/* width */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}
/* Corner */
::-webkit-scrollbar-corner {
  background: none;
}

.omnidb__tab-menu--primary {
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-scrollbar-width: thin;
  scrollbar-width: thin;
  &::-webkit-scrollbar {
    -webkit-scrollbar-width: thin;
    scrollbar-width: thin;
    width: 2px;
  }
}

.nav-tabs {
  border-bottom: none;
}

/* PRIMARY LAYOUT */
.omnidb__tab-menu--container--primary {
  display: grid;
  grid-template: 'menu content' 100% / auto minmax(0, 1fr);
  height: 100%;

  &.omnidb__tab-menu--container--menu-shown {

    .omnidb__tab-menu--primary .omnidb__tab-menu__link-content {
      flex-direction: column;
    }
    .omnidb__tab-menu--primary .omnidb__tab-menu__link-name {
      white-space: normal;
      width: 80px;
    }

    .omnidb__panel {
      padding-left: 86px;
    }
    .omnidb__panel-view--full {
      left: 100px;
      width: calc(100vw - 110px);
    }
  }
}

.omnidb__panel {
  padding-left: 33px;
}
.omnidb__panel-view--full {
  left: 45px;
  width: calc(100vw - 60px);
}

/* TAB MENU -- PRIMARY */
.omnidb__tab-menu--primary {
  height: 100%;
  padding: 0px;
  z-index: 950;
  position: relative;
}
.omnidb__tab-menu--primary .nav-tabs {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-flex-start;
}
.omnidb__tab-menu--primary .nav-tabs .nav-item {
  border: none;
  margin-bottom: 3px;
  margin-top: 3px;
  padding: 3px;
}
.omnidb__tab-menu.omnidb__tab-menu--primary:hover .omnidb__tab-menu__link-close {
  opacity: 1;
}
.omnidb__tab-menu--primary .omnidb__tab-menu__link-name {
  display: inline-block;
  overflow: hidden;
  transition: 0.35s;
  /* width: 80px; */
  white-space: nowrap;
  text-align: center;
  font-size: 10px;
  width: 0px;
}
.omnidb__tab-menu--primary .omnidb__tab-menu__link:hover {
  cursor: pointer;
}

/* MAIN */
.omnidb__main__tablist-toggler {
  align-items: center;
  color: #434f66;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 5000;
  height: 36px;
  text-align: center;
  border: none;
  width: 36px;
}

/* TAB MENU */
.omnidb__tab-menu .omnidb__tab-menu__link {
  position: relative;
}
.omnidb__tab-menu .omnidb__tab-menu__link-close {
  opacity: 0;
  position: absolute;
  right: 0px;
  top: 50%;
  transform: translateY(-50%);
  transition: 0.3s;
}
.omnidb__tab-menu .omnidb__tab-menu__link-content {
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 100%;
  justify-content: flex-start;
}

/* TAB MENU -- SECONDARY */
.omnidb__tab-menu--secondary {
  padding-top: 3px;
  padding-right: 80px;
}
.omnidb__tab-menu--secondary .omnidb__tab-menu__link-name {
  padding-right: 10px;
}

.omnidb__tab-menu--secondary .omnidb__tab-menu__link-icon {
  margin-right: 3px;
}
.omnidb__tab-menu.omnidb__tab-menu--secondary .omnidb__tab-menu__link:hover .omnidb__tab-menu__link-close {
  opacity: 1;
}

@media (min-width: 1440px) {
  .omnidb__rounded--lg {
    border-radius: 18px;
  }

  .omnidb__utilities-menu {
    padding: 0.25rem 0.125rem;
    position: fixed;
    right: 1rem;
    top: 0.5rem;
    z-index: 1001;
  }
  .omnidb__utilities-menu .omnidb__menu__btn.nav-link,
  .omnidb__utilities-menu .badge-info {
    margin-left: 0px;
    margin-right: 0px;
    overflow: hidden;
    padding: 0px;
    width: 0px;
    transition: 0.35s;
  }
  .omnidb__utilities-menu.omnidb__utilities-menu--show .omnidb__menu__btn.nav-link {
    width: 27px;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
  }
  .omnidb__utilities-menu.omnidb__utilities-menu--show .badge-info {
    padding: .25em .4em;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    width: 3rem;
  }

  .omnidb__menu__btn {
    align-items: center;
    border-radius: 100%;
    background-color: #FFF;
    display: flex;
    justify-content: center;
    height: 27px;
    width: 27px;
    overflow: hidden;
  }

}

@media (min-width: 1280px) and (max-width: 1439px) {
  .omnidb__rounded--lg {
    border-radius: 18px;
  }

  .omnidb__utilities-menu {
    padding: 0.25rem 0.125rem;
    position: fixed;
    right: 1rem;
    top: 0.5rem;
    z-index: 1001;
  }
  .omnidb__utilities-menu .omnidb__menu__btn.nav-link,
  .omnidb__utilities-menu .badge-info {
    margin-left: 0px;
    margin-right: 0px;
    overflow: hidden;
    padding: 0px;
    width: 0px;
    transition: 0.35s;
  }
  .omnidb__utilities-menu.omnidb__utilities-menu--show .omnidb__menu__btn.nav-link {
    width: 27px;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
  }
  .omnidb__utilities-menu.omnidb__utilities-menu--show .badge-info {
    padding: .25em .4em;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    width: 3rem;
  }

  .omnidb__menu__btn {
    align-items: center;
    border-radius: 100%;
    background-color: #FFF;
    display: flex;
    justify-content: center;
    height: 27px;
    width: 27px;
    overflow: hidden;
  }

}

@media (min-width: 240px) and (max-width: 1279px) {
  .omnidb__rounded--lg {
    border-radius: 18px;
  }

  .omnidb__utilities-menu {
    padding: 0.25rem 0.125rem;
    position: fixed;
    right: 2px;
    top: 2px;
    z-index: 1001;
  }
  .omnidb__utilities-menu .omnidb__menu__btn.nav-link,
  .omnidb__utilities-menu .badge-info {
    margin-left: 0px;
    margin-right: 0px;
    overflow: hidden;
    padding: 0px;
    width: 0px;
    transition: 0.35s;
  }
  .omnidb__utilities-menu.omnidb__utilities-menu--show .omnidb__menu__btn.nav-link {
    width: 27px;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
  }
  .omnidb__utilities-menu.omnidb__utilities-menu--show .badge-info {
    padding: .25em .4em;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    width: 3rem;
  }

  .omnidb__menu__btn {
    align-items: center;
    border-radius: 100%;
    background-color: #FFF;
    display: flex;
    justify-content: center;
    height: 27px;
    width: 27px;
    overflow: hidden;
  }

}
/* ... */

